syntax = "proto3";

package AcFunDanmu.Im.Cloud.Message;

import "SyncCookie.proto";

message UserGroupListRequest {
	Im.Basic.SyncCookie syncCookie = 2;
}
